feat: add header

--- a/index.html
+++ b/index.html
@@ -2,12 +2,58 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Learning Platform</title>
   </head>
   <body>
-    <div id="app">hello</div>
+    <div id="app">
+      <header class="header">
+        <div class="header__container">
+          <div class="header__logo-wrap">
+            <a href="/">
+              <img src="src/assets/icons/logo.png" alt="the logo for Online Learning Platform app" />
+            </a>
+          </div>
+          <div class="header__nav">
+            <ul class="nav">
+              <li class="nav__item">
+                <a href="" class="nav__link">About Us</a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">Gallery</a>
+              </li>
+              <li class="nav__item">
+                <a href="" class="nav__link">Contacts</a>
+              </li>
+              <li class="nav__item nav__courses-dropdown">
+                <a href="#" class="nav__link">Courses</a>
+                <ul class="courses">
+                  <li class="courses__item">
+                    <a href="" class="courses__link">Frontend development</a>
+                  </li>
+                  <li class="courses__item">
+                    <a href="" class="courses__link">Backend development</a>
+                  </li>
+                  <li class="courses__item">
+                    <a href="" class="courses__link">UI/UX design</a>
+                  </li>
+                  <li class="courses__item">
+                    <a href="" class="courses__link"> Brain Training</a>
+                  </li>
+                  <li class="courses__item">
+                    <a href="" class="courses__link"> Interpersonal Communication</a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </header>
+      <main class="main"></main>
+      <footer class="footer"></footer>
+    </div>
+
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
