feat: add markup for slider

--- a/index.html
+++ b/index.html
@@ -44,14 +44,79 @@
                   <a href="" class="courses__link"> Brain Training</a>
                 </li>
                 <li class="courses__item">
-                  <a href="" class="courses__link"> Interpersonal Communication</a>
+                  <a href="" class="courses__link">English for developers</a>
+                </li>
+                <li class="courses__item">
+                  <a href="" class="courses__link">Mathematics</a>
                 </li>
               </ul>
             </li>
           </ul>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="main">
+        <section class="favorite">
+          <div class="favorite__container">
+            <h2 class="favorite__title">Choose your <span>favorite</span> course</h2>
+            <div class="favorite__slider-wrap">
+              <div class="favorite__slider slider">
+                <ul class="slider__items">
+                  <figure class="slider__item">
+                    <img src="src/assets/images/coding1.webp" alt="image for course" />
+                    <figcaption class="slider__item-info">
+                      <h3 class="slider__item-title">Discrete Mathematics for Computer Science</h3>
+                      <p class="slider__item-description">
+                        Dive deep into advanced algorithms and data structures. Topics include sorting, searching,
+                        trees, and graphs, aimed at providing a strong foundation for tackling complex problems.
+                      </p>
+                    </figcaption>
+                    <a href="#" class="slider__item-link"></a>
+                  </figure>
+                </ul>
+                <div class="favorite__pagination">
+                  <ul class="favorite__pagination-items">
+                    <li class="favorite__pagination-item">
+                      <div class="favorite__pagination-progress"></div>
+                    </li>
+                    <li class="favorite__pagination-item">
+                      <div class="favorite__pagination-progress"></div>
+                    </li>
+                    <li class="favorite__pagination-item">
+                      <div class="favorite__pagination-progress"></div>
+                    </li>
+                    <li class="favorite__pagination-item">
+                      <div class="favorite__pagination-progress"></div>
+                    </li>
+                    <li class="favorite__pagination-item">
+                      <div class="favorite__pagination-progress"></div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="favorite__arrows arrow-left">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path
+                      d="M18.5 12H6M6 12L12 6M6 12L12 18"
+                      stroke="#403F3D"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></path>
+                  </svg>
+                </div>
+                <div class="favorite__arrows arrow-right">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                    <path
+                      d="M6 12H18.5M18.5 12L12.5 6M18.5 12L12.5 18"
+                      stroke="#403F3D"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></path>
+                  </svg>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer">
         <div class="footer__container">
           <ul class="social">
