refactor: generate category list dynamically move category list to consts, so than it was expansible

--- a/index.html
+++ b/index.html
@@ -30,26 +30,9 @@
               <a href="#" class="nav__link">Courses</a>
               <input type="checkbox" class="dropdown-toggle" id="dropdown-toggler" hidden />
               <label for="dropdown-toggler"></label>
-              <ul class="courses">
-                <li class="courses__item">
-                  <a href="" class="courses__link">Frontend development</a>
-                </li>
-                <li class="courses__item">
-                  <a href="" class="courses__link">Backend development</a>
-                </li>
-                <li class="courses__item">
-                  <a href="" class="courses__link">UI/UX design</a>
-                </li>
-                <li class="courses__item">
-                  <a href="" class="courses__link"> Brain Training</a>
-                </li>
-                <li class="courses__item">
-                  <a href="" class="courses__link">English for developers</a>
-                </li>
-                <li class="courses__item">
-                  <a href="" class="courses__link">Mathematics</a>
-                </li>
-              </ul>
+
+              <!-- LIST OF COURSES IS DYNAMICALLY GENERATED -->
+              <ul class="courses" id="courses"></ul>
             </li>
           </ul>
         </div>
@@ -61,6 +44,8 @@
             <div class="favorite__slider-wrap">
               <div class="favorite__slider slider">
                 <ul class="slider__items">
+                  <!-- LIST OF CARDS IS DYNAMICALLY GENERATED -->
+
                   <figure class="slider__item">
                     <img src="src/assets/images/coding1.webp" alt="image for course" />
                     <figcaption class="slider__item-info">
