--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
               <ul class="courses" id="courses"></ul>
             </li>
           </ul>
+          <button class="header__burger" type="button">
+            <span></span>
+          </button>
+          <div class="header__burger-overlay"></div>
         </div>
       </header>
       <main class="main" id="appContent"></main>
