--- a/index.html
+++ b/index.html
@@ -21,23 +21,24 @@
               />
             </a>
           </div>
+          <nav class="header__nav nav">
+            <ul class="nav__items">
+              <li class="nav__item">
+                <a href="/contacts#about" class="nav__link" data-link>About Us</a>
+              </li>
+              <li class="nav__item">
+                <a href="/contacts" class="nav__link" id="contactsLink" data-link>Contacts</a>
+              </li>
+              <li class="nav__item nav__courses-dropdown">
+                <a href="/gallery" class="nav__link" id="galleryLink" data-link>Courses gallery</a>
+                <input type="checkbox" class="dropdown-toggle" id="dropdown-toggler" hidden />
+                <label for="dropdown-toggler"></label>
 
-          <ul class="header__nav nav">
-            <li class="nav__item">
-              <a href="/contacts#about" class="nav__link" data-link>About Us</a>
-            </li>
-            <li class="nav__item">
-              <a href="/contacts" class="nav__link" id="contactsLink" data-link>Contacts</a>
-            </li>
-            <li class="nav__item nav__courses-dropdown">
-              <a href="/gallery" class="nav__link" id="galleryLink" data-link>Courses gallery</a>
-              <input type="checkbox" class="dropdown-toggle" id="dropdown-toggler" hidden />
-              <label for="dropdown-toggler"></label>
-
-              <!-- LIST OF COURSES IS DYNAMICALLY GENERATED -->
-              <ul class="courses" id="courses"></ul>
-            </li>
-          </ul>
+                <!-- LIST OF COURSES IS DYNAMICALLY GENERATED -->
+                <ul class="courses" id="courses"></ul>
+              </li>
+            </ul>
+          </nav>
         </div>
         <button class="header__burger" type="button">
           <span></span>
