feat: add loader

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         ></path>
       </svg>
     </button>
+    <div class="loader-wrap" id="loader">
+      <div class="loader"></div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
