--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <div class="header__logo-wrap">
             <a href="/" id="homeLink" data-link>
               <img
-                src="src/assets/icons/logo.png"
+                src="/assets/icons/logo.png"
                 width="70"
                 height="70"
                 loading="lazy"
